feat: Re-add readeck with fully corrected configuration

--- a/cluster/base/kustomization.yaml
+++ b/cluster/base/kustomization.yaml
@@ -5,4 +5,4 @@ resources:
   - ./smb-storageclass-strict.yaml
   - ./smb-storageclass-adguard.yaml
   - ./smb-storageclass-postgres.yaml
-  #- ./smb-storageclass-readeck-db.yaml
+  - ./smb-storageclass-readeck-db.yaml
