Fix readeck ConfigMap and PostgreSQL user configuration

--- a/cluster/apps/argo-apps/readeck-db-app.yaml
+++ b/cluster/apps/argo-apps/readeck-db-app.yaml
@@ -16,6 +16,10 @@ spec:
         auth:
           database: readeck
           username: readeck
+          existingSecret: "readeck-secrets"  # Using your existing secret
+          secretKeys:
+            adminPasswordKey: "postgres-password"
+            userPasswordKey: "password"
         primary:
           podSecurityContext:
             enabled: true
