fix(argo): Ignore caBundle on APIServices for monitoring app

--- a/cluster/apps/argo-apps/monitoring-app.yaml
+++ b/cluster/apps/argo-apps/monitoring-app.yaml
@@ -62,3 +62,8 @@ spec:
       selfHeal: true
     syncOptions:
     - CreateNamespace=true
+  ignoreDifferences:
+  - group: apiregistration.k8s.io
+    kind: APIService
+    jsonPointers:
+    - /spec/caBundle
