FIX traefik  Dashboard

--- a/cluster/apps/argo-apps/traefik-app.yaml
+++ b/cluster/apps/argo-apps/traefik-app.yaml
@@ -1,7 +1,3 @@
-# cluster/apps/argo-apps/traefik-app.yaml
-# Option 1: Remove the ingressRoute configuration from Helm values
-# and keep using the separate IngressRoute resource
-
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
@@ -17,14 +13,27 @@ spec:
     targetRevision: '28.0.0'
     helm:
       values: |
+        # Enable access logs
         accessLogs:
           enabled: true
+        
+        # Service configuration
         service:
           type: LoadBalancer
           loadBalancerIP: 192.168.1.45
+        
+        # API and Dashboard configuration
         api:
           dashboard: true
           insecure: true
+          debug: true
+        
+        # Disable the built-in dashboard IngressRoute to avoid conflicts
+        ingressRoute:
+          dashboard:
+            enabled: false
+        
+        # Port configuration
         ports:
           web:
             port: 8000
@@ -36,10 +45,18 @@ spec:
             protocol: TCP
           traefik:
             port: 9000
-        # Disable the built-in dashboard IngressRoute since we have our own
-        ingressRoute:
-          dashboard:
-            enabled: false
+            expose: true
+        
+        # Additional configuration for debugging
+        log:
+          level: INFO
+        
+        # Ensure providers are correctly configured
+        providers:
+          kubernetesIngress:
+            enabled: true
+          kubernetesCRD:
+            enabled: true
   destination:
     server: 'https://kubernetes.default.svc'
     namespace: traefik-system
