--- a/cluster/apps/traefik-dashboard/ingress.yaml
+++ b/cluster/apps/traefik-dashboard/ingress.yaml
@@ -7,7 +7,7 @@ spec:
   entryPoints:
     - web
   routes:
-    - match: Host(`traefik.homelab.local`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
+    - match: Host(`traefik.homelab.local`)
       kind: Rule
       services:
         - name: api@internal
