--- a/cluster/apps/traefik-dashboard/ingress.yaml
+++ b/cluster/apps/traefik-dashboard/ingress.yaml
@@ -10,5 +10,19 @@ spec:
     - match: Host(`traefik.homelab.local`)
       kind: Rule
       services:
-        - name: api@internal
-          kind: TraefikService
+        - name: traefik
+          port: 9000
+      middlewares:
+        - name: dashboard-redirect
+---
+# Redirect middleware to ensure proper dashboard access
+apiVersion: traefik.io/v1alpha1
+kind: Middleware
+metadata:
+  name: dashboard-redirect
+  namespace: traefik-system
+spec:
+  redirectRegex:
+    regex: ^https?://([^/]+)/?$
+    replacement: http://${1}/dashboard/
+    permanent: false
