--- a/cluster/apps/homepage/configmap.yaml
+++ b/cluster/apps/homepage/configmap.yaml
@@ -40,7 +40,7 @@ data:
   services.yaml: |
     - Networking:
         - Traefik:
-            href: https://traefik.homelab.local/dashboard/#/
+            href: http://traefik.homelab.local/dashboard/#/
             description: Traefik Dashboard
             icon: traefik
         - AdGuard:
