--- a/cluster/apps/commafeed/deployment.yaml
+++ b/cluster/apps/commafeed/deployment.yaml
@@ -26,10 +26,7 @@ spec:
             - name: QUARKUS_DATASOURCE_JDBC_URL
               value: "jdbc:postgresql://commafeed-db-postgresql.media-stack.svc.cluster.local:5432/commafeed"
             - name: QUARKUS_DATASOURCE_USERNAME
-              valueFrom: "commafeed"
-              secretKeyRef:
-                  name: commafeed-creds
-                  key: DB_USERNAME
+              value: "commafeed" 
             - name: QUARKUS_DATASOURCE_PASSWORD
               valueFrom:
                 secretKeyRef:
@@ -44,15 +41,15 @@ spec:
             limits:
               memory: "728Mi"
               cpu: "500m"
-#          livenessProbe:
-#            httpGet:
-#              path: /q/health/live
-#              port: 8082
-#            initialDelaySeconds: 60
-#            periodSeconds: 30
-#          readinessProbe:
-#            httpGet:
-#              path: /q/health/ready
-#              port: 8082
-#            initialDelaySeconds: 30
-#            periodSeconds: 10
+          livenessProbe:
+            httpGet:
+              path: /q/health/live
+              port: 8082
+            initialDelaySeconds: 60
+            periodSeconds: 30
+          readinessProbe:
+            httpGet:
+              path: /q/health/ready
+              port: 8082
+            initialDelaySeconds: 30
+            periodSeconds: 10
