--- a/cluster/apps/karakeep/kustomization.yaml
+++ b/cluster/apps/karakeep/kustomization.yaml
@@ -1,7 +1,9 @@
+# cluster/apps/karakeep/kustomization.yaml
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - namespace.yaml
+  - karakeep-configmap.yaml 
   - data-pvc.yaml
   - web-deployment.yaml
   - web-service.yaml
