--- a/cluster/apps/karakeep/web-deployment.yaml
+++ b/cluster/apps/karakeep/web-deployment.yaml
@@ -23,43 +23,17 @@ spec:
       containers:
         - name: karakeep-web
           image: ghcr.io/karakeep-app/karakeep:latest
-          env:
-            - name: DATABASE_URL
-              valueFrom:
-                secretKeyRef:
-                  name: karakeep-secrets
-                  key: DATABASE_URL
-            - name: MEILISEARCH_HOST
-              value: "http://meilisearch.karakeep.svc.cluster.local:7700"
-            - name: MEILISEARCH_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: karakeep-secrets
-                  key: MEILISEARCH_KEY
-            - name: BROWSERLESS_HOST
-              value: "http://karakeep-chrome.karakeep.svc.cluster.local:3001"
-            - name: NEXTAUTH_URL
-              value: "http://karakeep.homelab.local"
-            - name: NEXTAUTH_SECRET
-              valueFrom:
-                secretKeyRef:
-                  name: karakeep-secrets
-                  key: NEXTAUTH_SECRET
-            - name: AI_PROVIDER
-              value: "gemini"
-            - name: GEMINI_API_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: karakeep-secrets
-                  key: GEMINI_API_KEY
-            - name: TIMEZONE
-              value: "America/Mexico_City"
+          imagePullPolicy: Always
           ports:
-            - name: http
-              containerPort: 3000
+            - containerPort: 3000
           volumeMounts:
             - name: data
-              mountPath: /app/data
+              mountPath: /data
+          envFrom:
+            - secretRef:
+                name: karakeep-secrets
+            - configMapRef:
+                name: karakeep-configuration
       volumes:
         - name: data
           persistentVolumeClaim:
