fix folder music v2

--- a/cluster/apps/media-stack/navidrome/navidrome-deployment.yaml
+++ b/cluster/apps/media-stack/navidrome/navidrome-deployment.yaml
@@ -55,7 +55,7 @@ spec:
             - name: config
               mountPath: /data
             - name: downloads
-              mountPath: /media/music 
+              mountPath: music 
       volumes:
         - name: config
           persistentVolumeClaim:
