Add karakeep icon replace

--- a/cluster/apps/homepage/configmap.yaml
+++ b/cluster/apps/homepage/configmap.yaml
@@ -84,7 +84,7 @@ data:
         - Karakeep:
             href: http://karakeep.homelab.local
             description: RSS & Readlater
-            icon: Karakeep
+            icon: hoarder
     - Database:
         - pgAdmin:
             href: http://pgadmin.homelab.local
