--- a/cluster/apps/karakeep/meilisearch-deployment.yaml
+++ b/cluster/apps/karakeep/meilisearch-deployment.yaml
@@ -19,11 +19,14 @@ spec:
         - name: meilisearch
           image: getmeili/meilisearch:latest
           env:
-          - name: MEILI_MASTER_KEY
-          valueFrom:
-             secretKeyRef:
-             name: karakeep-secrets  
-             key: MEILISEARCH_KEY   
+          - name: MEILI_MASTER_KEY 
+            valueFrom:
+              secretKeyRef:
+                name: karakeep-secrets
+                key: MEILISEARCH_KEY
+          args:
+            - "--master-key"
+            - "$(MEILI_MASTER_KEY)"
           ports:
             - name: http
               containerPort: 7700
