--- a/cluster/apps/karakeep/meilisearch-deployment.yaml
+++ b/cluster/apps/karakeep/meilisearch-deployment.yaml
@@ -19,20 +19,37 @@ spec:
         - name: meilisearch
           image: getmeili/meilisearch:latest
           env:
-          - name: MEILI_MASTER_KEY 
-            valueFrom:
-              secretKeyRef:
-                name: karakeep-secrets
-                key: MEILISEARCH_KEY
-          args:
-            - "--master-key"
-            - "$(MEILI_MASTER_KEY)"
+            - name: MEILI_MASTER_KEY 
+              valueFrom:
+                secretKeyRef:
+                  name: karakeep-secrets
+                  key: MEILISEARCH_KEY
+            - name: MEILI_ENV
+              value: "production"
           ports:
             - name: http
               containerPort: 7700
           volumeMounts:
             - name: data
               mountPath: /data.ms
+          livenessProbe:
+            httpGet:
+              path: /health
+              port: 7700
+              httpHeaders:
+                - name: Authorization
+                  value: "Bearer $(MEILI_MASTER_KEY)"
+            initialDelaySeconds: 30
+            periodSeconds: 10
+          readinessProbe:
+            httpGet:
+              path: /health
+              port: 7700
+              httpHeaders:
+                - name: Authorization
+                  value: "Bearer $(MEILI_MASTER_KEY)"
+            initialDelaySeconds: 10
+            periodSeconds: 5
       volumes:
         - name: data
           persistentVolumeClaim:
