--- a/cluster/apps/karakeep/web-deployment.yaml
+++ b/cluster/apps/karakeep/web-deployment.yaml
@@ -19,6 +19,19 @@ spec:
         runAsUser: 1000
         runAsGroup: 1000
         fsGroup: 1000
+      initContainers:
+        - name: wait-for-meilisearch
+          image: curlimages/curl:latest
+          command:
+            - /bin/sh
+            - -c
+            - |
+              echo "Waiting for MeiliSearch to be ready..."
+              until curl -f http://meilisearch.karakeep.svc.cluster.local:7700/health; do
+                echo "MeiliSearch not ready yet, waiting..."
+                sleep 5
+              done
+              echo "MeiliSearch is ready!"
       containers:
         - name: karakeep-web
           image: ghcr.io/karakeep-app/karakeep:latest
@@ -29,16 +42,38 @@ spec:
             - name: data
               mountPath: /data
           env:
+            - name: MEILISEARCH_KEY 
+              valueFrom:
+                secretKeyRef:
+                  name: karakeep-secrets
+                  key: MEILISEARCH_KEY
             - name: MEILI_MASTER_KEY 
               valueFrom:
                 secretKeyRef:
                   name: karakeep-secrets
-                  key: MEILISEARCH_KEY 
+                  key: MEILISEARCH_KEY
+            - name: MEILI_API_KEY 
+              valueFrom:
+                secretKeyRef:
+                  name: karakeep-secrets
+                  key: MEILISEARCH_KEY
           envFrom:
             - secretRef:
                 name: karakeep-secrets
             - configMapRef:
                 name: karakeep-configuration
+          livenessProbe:
+            httpGet:
+              path: /
+              port: 3000
+            initialDelaySeconds: 60
+            periodSeconds: 30
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 3000
+            initialDelaySeconds: 30
+            periodSeconds: 10
       volumes:
         - name: data
           persistentVolumeClaim:
