--- a/cluster/apps/karakeep/chrome-service.yaml
+++ b/cluster/apps/karakeep/chrome-service.yaml
@@ -3,10 +3,14 @@ kind: Service
 metadata:
   name: karakeep-chrome
   namespace: karakeep
+  labels:
+    app: karakeep-chrome
 spec:
   selector:
     app: karakeep-chrome
   ports:
     - name: http
-      port: 3001 
-      targetPort: 3001 
+      port: 3001
+      targetPort: 3001
+      protocol: TCP
+  type: ClusterIP
