--- a/cluster/apps/karakeep/karakeep-configmap.yaml
+++ b/cluster/apps/karakeep/karakeep-configmap.yaml
@@ -8,3 +8,5 @@ data:
   MEILI_ADDR: "http://meilisearch.karakeep.svc.cluster.local:7700"
   BROWSER_WEB_URL: "http://karakeep-chrome.karakeep.svc.cluster.local:3001"
   NODE_ENV: "production"
+  BROWSER_TIMEOUT: "60000"
+  BROWSER_MAX_RETRIES: "3"
