Add Argo ingress

--- a/cluster/apps/argocd/ingress.yaml
+++ b/cluster/apps/argocd/ingress.yaml
@@ -1,12 +1,9 @@
-# cluster/apps/argocd/ingress.yaml
 apiVersion: traefik.io/v1alpha1
 kind: ServersTransport
 metadata:
   name: argocd-transport
   namespace: argocd
 spec:
-  # Permite a Traefik comunicarse con backends que usan certificados autofirmados.
-  # Es seguro para la comunicación interna del clúster.
   insecureSkipVerify: true
 ---
 apiVersion: traefik.io/v1alpha1
@@ -24,4 +21,5 @@ spec:
         - name: argocd-server
           port: 443
           scheme: https
+          # Esta línea es la que hace referencia al ServersTransport de arriba.
           serversTransport: argocd-transport
