Change Address Networking

--- a/cluster/base/smb-storageclass.yaml
+++ b/cluster/base/smb-storageclass.yaml
@@ -1,11 +1,10 @@
-# cluster/base/smb-storageclass.yaml
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: smb-dynamic # Nombre de tu nuevo StorageClass
 provisioner: smb.csi.k8s.io
 parameters:
-  source: "//192.168.1.6/k8s-data" # LA IP DE TU HOST WINDOWS Y EL NUEVO RECURSO COMPARTIDO
+  source: "//192.168.100.2/k8s-data"  
 
   # Estas líneas son CORRECTAS y enlazan el Secret con el driver.
   csi.storage.k8s.io/node-stage-secret-name: "csi-smb-secret"
